<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/tituloInsta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />



    <Space
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/nombreUsuario"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNombreCompleto"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/email"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/pass"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:layout_marginStart="35dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />





            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />



            <Space
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btnAceptar"

                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="registrarse"
                android:text="@string/aceptar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>